--- a/src/App.css
+++ b/src/App.css
@@ -267,3 +267,13 @@
   display: flex;
   flex: 1;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
